--- a/tecnoEmerg.html
+++ b/tecnoEmerg.html
@@ -22,7 +22,7 @@
                 <nav id="nav">
                     <ul>
                         <li>
-                            <a href="#inicio" onclick="seleccionar()">
+                            <a href="index.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-house"></i>
                                 <span>Inicio</span>
                             </a>
