--- a/desarrolloWeb.html
+++ b/desarrolloWeb.html
@@ -28,7 +28,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#sabores" onclick="seleccionar()">
+                            <a href="desarrolloWeb.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-laptop-code"></i>
                                 <span>Desarrollo Web</span>
                             </a>
@@ -88,7 +88,12 @@
         </div>
 
     </section>
+    
 
+    <!-- SECCION DE DESARROLLO WEB-->
+    <section>
+        
+    </section>
 
     <!-- SECCION CONTACTO Y PIE DE PAGINA -->
     <section id="contacto">
