--- a/IA.html
+++ b/IA.html
@@ -27,7 +27,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#sabores" onclick="seleccionar()">
+                            <a href="tecnoEmerg.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-laptop-code"></i>
                                 <span>Desarrollo Web</span>
                             </a>
@@ -38,7 +38,7 @@
                                 <span>Inteligencia Artificial</span>
                             </a></li>
                         <li>
-                            <a href="#blog" onclick="seleccionar()">
+                            <a href="gest_tecnolo.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-pen"></i>
                                 <span>Gestión Tecnologica</span>
                             </a>
