--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <span>Inteligencia Artificial</span>
                             </a></li>
                         <li>
-                            <a href="#blog" onclick="seleccionar()">
+                            <a href="gest_tecnolo.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-pen"></i>
                                 <span>Gestión Tecnologica</span>
                             </a>
@@ -182,7 +182,7 @@
             <div class="col">
                 <h3>Grupo</h3>
                 <a href="#">Jose C.</a>
-                <a href="#">Cosset G.</a>
+                <a href="#">Cosette G.</a>
                 <a href="#">Edely J.</a>
                 <a href="#">Vania P.</a>
             </div>
