Mi referencia al index taba mal :0

--- a/gest_tecnolo.html
+++ b/gest_tecnolo.html
@@ -27,7 +27,7 @@
                 <nav id="nav">
                     <ul>
                         <li>
-                            <a href="#inicio" onclick="seleccionar()">
+                            <a href="index.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-house"></i>
                                 <span>Inicio</span>
                             </a>
@@ -333,10 +333,10 @@
 
             <div class="col">
                 <h3>Grupo</h3>
-                <a href="#">Jose C.</a>
-                <a href="#">Cosette G.</a>
-                <a href="#">Edely J.</a>
-                <a href="#">Vania P.</a>
+                <p>Jose Condori</p>
+                <p>Cosette Guevara</p>
+                <p>Edely Tito</p>
+                <p>Vania Patzi</p>
             </div>
             <div class="col">
                 <h3>Social Media</h3>
