agregando al index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#sabores" onclick="seleccionar()">
+                            <a href="desarrolloWeb.html" onclick="seleccionar()">
                                 <i class="fa-solid fa-laptop-code"></i>
                                 <span>Desarrollo Web</span>
                             </a>
